<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <!-- The hint text that ask user to input their name [CHAR LIMIT=NONE]-->
    <string name="hint_name">Name</string>
    <!-- Header text for the list of toppings [CHAR LIMIT=20] -->
    <string name="toppings">Toppings</string>
    <!-- The whipped cream toppings checkbox [CHAR LIMIT=NONE]-->
    <string name="whipped_cream_checkbox">Whipped Cream</string>
    <!-- The chocolate toppings checkbox [CHAR LIMIT=NONE]-->
    <string name="chocolate_checkbox">Chocolate</string>
    <!-- Header text for quantity of coffee {CHAR LIMIT=NONE]-->
    <string name="quantity">Quantity</string>
    <!-- Initial value of quantity [CHAR LIMIT=NONE] -->
    <string name="initial_quantity">2</string>
    <!-- Header text for order summary [CHAR LIMIT=NONE]-->
    <string name="order_summary">Order Summary</string>
    <!-- Total price of coffee [CHAR LIMIT=NONE] -->
    <string name="initial_total_price">$10</string>
    <!-- The order checkbox [CHAR LIMIT=NONE] -->
    <string name="order">Order</string>

    <!-- The user's name for the order summary [CHAR LIMIT=NONE] -->
    <string name="order_summary_name">Name:
        <xliff:g id="userName" example="Amy">%s</xliff:g></string>
    <!-- Ask user if they want to add whipped cream? [CHAR LIMIT=NONE]-->
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="yes">%s</xliff:g></string>
    <!-- Ask user if they want to add chocolate? [CHAR LIMIT=NONE]-->
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="yes">%s</xliff:g></string>

    <!-- This a string of yes, used when user wants a topping [CHAR LIMIT=NONE] -->
    <string name="yes">Yes</string>
    <!-- This a string of no, used when user dont want a topping [CHAR LIMIT=NONE] -->
    <string name="no">No</string>

    <!-- Display quantity of coffee [CHAR LIMIT=NONE]-->
    <string name="order_summary_quantity">Quantity : <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <!-- Display total price of coffee [CHAR LIMIT=NONE] -->
    <string name="order_summary_price">Total : $<xliff:g id="price" example="$10">%s</xliff:g></string>
    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="thank_you">Thank you!</string>

    <!-- This message appear when user try to order more than 100 cups of coffees [CHAR LIMIT=NONE] -->
    <string name="not_more_than_100">You cannot have more than 100 cups of coffees</string>
    <!-- This message appear when user try to order less than 1 cup of coffee [CHAR LIMIT=NONE] -->
    <string name="not_less_than_1">You cannot have less than 1 cup of coffee</string>

</resources>
